--- a/comments/feed/index.html
+++ b/comments/feed/index.html
@@ -7,11 +7,11 @@
 	>
 <channel>
 	<title>
-	Comentarios en 	</title>
+	Comentarios en Titulo	</title>
 	<atom:link href="http://192.168.1.8/comments/feed/" rel="self" type="application/rss+xml" />
 	<link>http://PLACEHOLDER.wpsho/</link>
 	<description></description>
-	<lastBuildDate>Fri, 14 Jan 2022 21:17:17 +0000</lastBuildDate>
+	<lastBuildDate>Tue, 27 Sep 2022 21:32:58 +0000</lastBuildDate>
 	<sy:updatePeriod>
 	hourly	</sy:updatePeriod>
 	<sy:updateFrequency>
